<resources>
    <string name="app_name">Economize</string>
    <string name="account_name">E-mail</string>
    <string name="username">exemplo@mail.com.br</string>
    <string name="password">Senha</string>
    <string name="password_hint">**********</string>
    <string name="sign_in">Entre</string>
    <string name="create_account">Criar Conta</string>
    <string name="forgot_your_login_info">Esqueceu sua senha?</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="email_hint">exemplo@mail.com.br</string>
    <string name="email">E-mail</string>
    <string name="reset_senha">Enviar e-mail de recuperação</string>
    <string name="receita">RECEITA</string>
    <string name="despesa">DESPESA</string>
    <string name="inicio">Início</string>
    <string name="grafico">Gráficos</string>
    <string name="metas">Metas</string>
    <string name="categorias">Categorias</string>
    <string name="sair">Sair</string>
    <string name="valor_hint">R$ 0,00</string>
    <string name="descricao_hint">Descrição</string>
    <string name="valor_receita_label">Valor da receita</string>
    <string name="data_hint">__/__/____</string>
    <string name="data_label">Data</string>
    <string name="salvar">SALVAR</string>
    <string name="categoria">Categoria</string>
    <string name="saldo">Saldo</string>
    <string name="valor_despesa_label">Valor da despesa</string>
    <string name="nova_categoria_label">Adicionar categoria</string>
    <string name="economia_label">Quanto pretende economizar por mês?</string>
    <string name="max_label">Qual o valor máximo que será gasto por mês?</string>
    <string name="min_label">Qual a receita mínima necessária por mês?</string>
    <string name="nova_cat_hint">Ex: Investimentos</string>
    <string name="update_valor">Salvar alteração</string>
    <string name="delete_valor">Excluir lançamento</string>
    <string name="despesa_label">Despesas por categoria</string>
    <string name="saldo_mes_label">Saldo do mês</string>
    <string name="economia_valor_label">Valor que pretende economizar</string>
    <string name="despesa_mes_label">Despesas do mês</string>
    <string name="max_valor_label">Máximo que pretende gastar</string>
    <string name="receita_label">Receita</string>
    <string name="receita_min_label">Receita mínima necessária</string>
    <string name="criar_conta">Crie sua conta como preferir</string>
    <string name="criar_email">Criar com E-mail</string>
    <string name="tenho_conta">Já tenho uma conta</string>
    <string name="altera_valor">Alterar valor</string>
    <string name="nova_categoria">Nova Categoria</string>
    <string name="tipo_lancamento">Tipo do lançamento</string>
    <string name="password_conf">Confirmar senha</string>
    <string name="gmail">Criar com Gmail</string>
    <string name="face">CRIAR COM FACEBOOK</string>
    <string name="facebook_app_id">285429682603608</string>
    <string name="fb_login_protocol_scheme">fb285429682603608</string>
</resources>
