<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DespesaActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvInicio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_home_gray"
            android:gravity="center"
            android:text="@string/inicio"
            android:textColor="#B4B4B4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGrafico"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_donut_gray"
            android:gravity="center"
            android:text="@string/grafico"
            android:textColor="#B4B4B4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLimites"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_porcentagem_gray"
            android:gravity="center"
            android:text="@string/metas"
            android:textColor="#B4B4B4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCategorias"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_engrenagem_gray"
            android:gravity="center"
            android:text="@string/categorias"
            android:textColor="#B4B4B4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSair"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_sair_gray"
            android:gravity="center"
            android:text="@string/sair"
            android:textColor="#B4B4B4"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDBDBD"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etTitle"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:hint="@string/descricao_hint"
            android:maxLength="100"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/valor_receita_label"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etReais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:hint="@string/valor_hint"
            android:inputType="number"
            android:maxLength="12"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/data_label"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:fontFamily="serif"
            android:hint="@string/data_hint"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/categoria"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="35sp" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/receita_button_bg"
            android:text="@string/salvar"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>