<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LimitesActivity">


    <TextView
        android:id="@+id/tvMinLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/min_label"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMaxValor" />

    <EditText
        android:id="@+id/etMinValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:hint="@string/valor_hint"
        android:inputType="number"
        android:maxLength="12"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMinLabel" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/receita_button_bg"
        android:text="@string/salvar"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEconomiaLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/economia_label"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/etEconomiaValor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/etEconomiaValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:background="@null"
        android:hint="@string/valor_hint"
        android:inputType="number"
        android:maxLength="12"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMaxLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMaxLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/max_label"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/etMaxValor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/etMaxValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:hint="@string/valor_hint"
        android:inputType="number"
        android:maxLength="12"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDBDBD"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvInicio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_home_gray"
            android:gravity="center"
            android:text="@string/inicio"
            android:textColor="#B4B4B4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGrafico"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_donut_gray"
            android:gravity="center"
            android:text="@string/grafico"
            android:textColor="#B4B4B4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLimites"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_porcentagem"
            android:gravity="center"
            android:text="@string/metas"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCategorias"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_engrenagem_gray"
            android:gravity="center"
            android:text="@string/categorias"
            android:textColor="#B4B4B4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSair"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_sair_gray"
            android:gravity="center"
            android:text="@string/sair"
            android:textColor="#B4B4B4"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>