<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceitaActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="2dp"
        android:background="#BDBDBD"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6" />

    <EditText
        android:id="@+id/etReais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="20dp"
        android:hint="@string/valor_hint"
        android:inputType="number"
        android:maxLength="12"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tiTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="50dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:errorEnabled="true"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReais">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/descricao_hint"
            android:maxLength="200" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiCategoria"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="#000"
        app:endIconDrawable="@drawable/ic_arrow_drop_down_gray_24dp"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCategoria"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/categoria" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiData"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="180dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="#000"
        app:errorEnabled="true"
        app:endIconDrawable="@drawable/ic_date_range_gray_24dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiCategoria">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvData"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/data_label" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_home_gray"
            android:text="@string/inicio"
            android:textColor="#B4B4B4"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGrafico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_donut_gray"
            android:text="@string/grafico"
            android:textColor="#B4B4B4"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLimites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_porcentagem_gray"
            android:text="@string/metas"
            android:textColor="#B4B4B4"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCategorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginRight="30dp"
            android:drawableTop="@drawable/ic_engrenagem_gray"
            android:text="@string/categorias"
            android:textColor="#B4B4B4"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/ic_sair_gray"
            android:text="@string/sair"
            android:textColor="#B4B4B4"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/despesaSecundary"
        android:text="@string/salvar"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>